add animations for home page

--- a/kenathPereraBlog/src/app/components/home/home.component.html
+++ b/kenathPereraBlog/src/app/components/home/home.component.html
@@ -1,10 +1,9 @@
 <section class="text-center text-white">
     <div class="container">
         <div class="profile-info">
-            <h1>Hi, I'm Kenath Perera</h1>
-            <!-- <img src="/images/banner.jpg" alt="Kenath Perera" class="profile-img"> -->
+            <h1 class="fade-scale color-transition ">Hi, I'm Kenath Perera</h1>
         </div>
-        <div class="hero">
+        <div class="hero slide-in">
         </div>
     </div>
 </section>
