--- a/kenathPereraBlog/src/app/components/projects/projects.component.html
+++ b/kenathPereraBlog/src/app/components/projects/projects.component.html
@@ -1,6 +1,6 @@
 <section class="projects text-center py-5">
     <div class="container">
-        <h2>Featured Projects</h2>
+        <h2>Featured Posts</h2>
         <div class="row">
             @for (project of projects; track project.title) {
             <div class="col-md-4">
