--- a/kenathPereraBlog/src/app/components/home/home.component.html
+++ b/kenathPereraBlog/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="text-center text-white">
     <div class="container">
-        <div class="profile-info">
+        <div class="profile-info mt-3">
             <h1 class="fade-scale color-transition ">Hi, I'm Kenath Perera</h1>
         </div>
         <div class="hero slide-in">
