fix responsive issues

--- a/kenathPereraBlog/src/app/components/home/home.component.html
+++ b/kenathPereraBlog/src/app/components/home/home.component.html
@@ -3,7 +3,8 @@
         <div class="profile-info mt-3">
             <h1 class="fade-scale color-transition ">Hi, I'm Kenath Perera</h1>
         </div>
-        <div class="hero slide-in">
+        <div class="slide-in mt-3 mb-3">
+            <img src="/images/banner.jpg" class="hero">
         </div>
     </div>
 </section>
