--- a/kenathPereraBlog/src/app/components/projects/projects.component.html
+++ b/kenathPereraBlog/src/app/components/projects/projects.component.html
@@ -8,7 +8,7 @@
                     <img [src]="project.image" alt="{{ project.title }}">
                     <h3>{{ project.title }}</h3>
                     <p>{{ project.description }}</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                    <a routerLink="/custom-auth-dotnet" class="btn btn-primary">Read More</a>
                 </div>
             </div>
             }
